@@ -2,6 +2,7 @@
 Version: 0.12.3
 Date: 08. 09. 2021
   Changed:
+    - Balancing - Wooden barricade no longer requires research to unlock
     - Balancing - Fixed fuel value of Wooden barricade being too overpowered
   Bugfixes:
     - Fixed lamp signal colours not working for science packs
